tests/machine/x/cpp/group_by_multi_join_sort.error
line 51: ../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:51:12: error: ‘g’ was not declared in this scope
   51 |   decltype(g.key.c_custkey) c_custkey;
      |            ^
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:51:12: error: ‘g’ was not declared in this scope
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:52:12: error: ‘g’ was not declared in this scope
   52 |   decltype(g.key.c_name) c_name;
      |            ^
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:52:12: error: ‘g’ was not declared in this scope
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:54:12: error: ‘g’ was not declared in this scope
   54 |   decltype(g.key.c_acctbal) c_acctbal;
      |            ^
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:54:12: error: ‘g’ was not declared in this scope
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:55:12: error: ‘g’ was not declared in this scope
   55 |   decltype(g.key.n_name) n_name;
      |            ^
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:55:12: error: ‘g’ was not declared in this scope
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:56:12: error: ‘g’ was not declared in this scope
   56 |   decltype(g.key.c_address) c_address;
      |            ^
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:56:12: error: ‘g’ was not declared in this scope
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:57:12: error: ‘g’ was not declared in this scope
   57 |   decltype(g.key.c_phone) c_phone;
      |            ^
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:57:12: error: ‘g’ was not declared in this scope
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:58:12: error: ‘g’ was not declared in this scope
   58 |   decltype(g.key.c_comment) c_comment;
      |            ^
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:58:12: error: ‘g’ was not declared in this scope
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp: In lambda function:
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:100:27: error: no match for ‘operator==’ (operand types are ‘__struct5’ and ‘__struct5’)
  100 |               if (__g.key == __key) {
      |                   ~~~~~~~ ^~ ~~~~~
      |                       |      |
      |                       |      __struct5
      |                       __struct5
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:114:39: error: lambda-expression in unevaluated context only available with ‘-std=c++20’ or ‘-std=gnu++20’
  114 |     std::vector<std::pair<decltype((-([&](auto v) {
      |                                       ^
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:117:31: error: lambda-expression in unevaluated context only available with ‘-std=c++20’ or ‘-std=gnu++20’
  117 |                           })(([&]() {
      |                               ^
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:132:27: error: template argument 1 is invalid
  132 |                           __struct8>>
      |                           ^~~~~~~~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:132:36: error: template argument 1 is invalid
  132 |                           __struct8>>
      |                                    ^~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:132:36: error: template argument 2 is invalid
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:135:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  135 |       __items.push_back(
      |               ^~~~~~~~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp: In lambda function:
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:139:45: error: ‘std::declval<__struct4>’ is not a class member
  139 |                                            .std::declval<__struct4>()
      |                                             ^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:142:51: error: ‘std::declval<__struct4>’ is not a class member
  142 |                                                  .std::declval<__struct4>()
      |                                                   ^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:139:45: error: ‘std::declval<__struct4>’ is not a class member
  139 |                                            .std::declval<__struct4>()
      |                                             ^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:142:51: error: ‘std::declval<__struct4>’ is not a class member
  142 |                                                  .std::declval<__struct4>()
      |                                                   ^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:143:65: error: template argument 1 is invalid
  143 |                                                  .l_discount))))>
      |                                                                 ^
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:143:65: error: template argument 2 is invalid
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:146:28: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  146 |                    __items.push_back(
      |                            ^~~~~~~~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:2)> [with auto:2 = int]’:
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:136:78:   required from here
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:136:54: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  136 |           {(-([&](auto v) { return std::accumulate(v.begin(), v.end(), 0); })(
      |                                                    ~~^~~~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:136:65: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  136 |           {(-([&](auto v) { return std::accumulate(v.begin(), v.end(), 0); })(
      |                                                               ~~^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp: In lambda function:
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:156:45: error: ‘std::declval<__struct4>’ is not a class member
  156 |                                            .std::declval<__struct4>()
      |                                             ^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:159:51: error: ‘std::declval<__struct4>’ is not a class member
  159 |                                                  .std::declval<__struct4>()
      |                                                   ^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:156:45: error: ‘std::declval<__struct4>’ is not a class member
  156 |                                            .std::declval<__struct4>()
      |                                             ^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:159:51: error: ‘std::declval<__struct4>’ is not a class member
  159 |                                                  .std::declval<__struct4>()
      |                                                   ^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:160:65: error: template argument 1 is invalid
  160 |                                                  .l_discount))))>
      |                                                                 ^
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:160:65: error: template argument 2 is invalid
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:163:28: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  163 |                    __items.push_back(
      |                            ^~~~~~~~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:3)> [with auto:3 = int]’:
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:154:18:   required from here
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:153:43: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  153 |                  return std::accumulate(v.begin(), v.end(), 0);
      |                                         ~~^~~~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:153:54: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  153 |                  return std::accumulate(v.begin(), v.end(), 0);
      |                                                    ~~^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp: In lambda function:
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:171:23: error: request for member ‘begin’ in ‘__items’, which is of non-class type ‘int’
  171 |     std::sort(__items.begin(), __items.end(),
      |                       ^~~~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:171:40: error: request for member ‘end’ in ‘__items’, which is of non-class type ‘int’
  171 |     std::sort(__items.begin(), __items.end(),
      |                                        ^~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:174:20: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
  174 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::begin
In file included from /usr/include/c++/13/string:53,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from ../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:2:
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
../../../tests/machine/x/cpp/group_by_multi_join_sort.cpp:174:20: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
  174 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~

 50 | struct __struct8 {
 51 |   decltype(g.key.c_custkey) c_custkey;
 52 |   decltype(g.key.c_name) c_name;
